@@ -5494,8 +5494,7 @@ Business Template is a set of definitions, such as skins, portal types and categ
       bt_name = self.getTitle()
       from App.config import getConfiguration
       instance_home = getConfiguration().instancehome
-      for path in (preferences.getPreferredWorkingCopyList() or # BBB
-                   preferences.getPreferredSubversionWorkingCopyList() or ['bt5']):
+      for path in (preferences.getPreferredWorkingCopyList() or ['bt5']):
         if not os.path.isabs(path):
           path = os.path.join(instance_home, path)
         bt_path = os.path.join(path, bt_name)
